<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_header"
        android:textColor="@color/teal_700"
        android:textSize="32sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_notifications_text" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/newsletter_subscription_toggle_off"
        android:textOn="@string/newsletter_subscription_toggle_on" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_checkbox_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up_button_text"/>

</LinearLayout>